fix(fab): Fix Fab focus style on safari (#361)
Closes ticket #2134

--- a/src/components/structural/fab/fab.module.css
+++ b/src/components/structural/fab/fab.module.css
@@ -109,3 +109,7 @@
     width: 50px;
   }
 }
+
+.fabLink {
+  display: block;
+}
